<resources>
    <string name="app_name">CDSmaster</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="armyranks">

    

 </string>
    <string name="introdayone">

        SSB means Service Selection Board.  It is set by the ministry of Defense for the recruitment of officers to the Tri Forces such as Army, Navy and Air force.  The Selection Board consists of senior officers from defense forces usually in the rank of major, colonel, Lt Colonel. The board consists of psychologists, GTO to check the candidate’s ability for defense forces.

After getting shortlisted in written examination candidates are called for SSB interview which is a 5 days process. \n

        \n
        \n
        \n
        \n
        Before starting the SSB candidates need to report one day before which includes document checking and form filling. They are supposed to report at the place mentioned in their call letter mostly they are asked to report at MCQ (Moment Control Office). Procedure of DAY 1 is given below:

   Also called as Screening tests, Day 1 comprises of the first bunch of tests. Intelligence test lies first in the list. This is a written test which involves Multiple Choice Questions (MCQs). It is both verbal and non verbal and the time allotted to finish it is 30 minutes. 50 verbal and 50 non verbal questions with a time limit of 30 minutes each is the complete structure of Officer Intelligence Test.

Next follows up the all time famous and multiple terms heard PP and DT. An acronym for Picture Perception and Description Test this is perhaps the most googled test of SSB. As hinted from the name you have to see a picture, perceive it, and then describe it. The catch is you will be shown a picture which will be hazy and blur for 30 seconds. You have to fill in a box foremost with such information as age, sex, number and mood of characters. Follow it by penning down a relevant story within 4 minutes. Jump to the last step by clearly narrating the story. Once all the group members are done with their narration they decide and reach up collectively to a common story. The results reveal a list of screened in and screened out candidates. If you fall in the former category then you get accommodation and prepare for day 2 while falling in the latter category expels you from further procedure. The objective of PPDT is to probe into your thoughts, perception, belief, emotions, logic and reasoning. Make sure your story and narration leaves a lasting impression
        \n</string>
    <string name="pysco">The blood- soul- backbone of SSB is the Psychology test and day 2 has a packed schedule of all sorts of Psychology tests. Central motive herein is to dive into your pschychology and assess your Officer like Qualities (OLQs). It is a conglomeration of TAT, WAT, SRT, and SD.\n\n

Thematic Apperception Test (TAT) resembles PP and DT quite a bit as here too you will be shown picture and furnish a story on its basis. Difference lies in the details such as: unlike PP and DT here you will see 11 pictures for 30 seconds each and you are supposed to write a story in 4 minutes based on the picture. The 12th slide will be blank and you have to frame a story of your own choice.\n\n

Word Association Test (WAT) as the name implies is all about connecting ideas to words. Get used to slides and screen because here too you will be shown 60 words in continuation. Each word will remain for 15 seconds and your task is to write the first sentence that pops up in your mind on seeing that picture. It is an assessment of your responsiveness, thought and ideology.\n\n

Situation Reaction Test (SRT) is a test of your moral stance, officer- like attitude and responsible nature. You will be provided with a booklet of 60 situations coming from daily life and you have to give your responses in relation to it. Time allotted is 30 minute. This is a true judgment of a sincere and dedicated Officer.\n\n

Self Description (SD) is a descriptive written test, quite synonymous to essay writing. Yes really You have to give self description by writing about what your parents, friends and teachers think about you as well as your future goal. This is nothing but a self- analytical procedure.\n
        \n
        \n
            \n</string>
    <string name="ssbolq">
        HERE ARE THE 15 OFFICER LIKE QUALITIES THAT ONE SHOULD POSSESS IN ORDER TO CLEAR THE SSB INTERVIEW\n\n


Being an Officer in Armed forces of India requires you to have specific 15 officer like qualities and traits. GTO, Psychologist and IO are all trying to find these qualities in you through your activities and body language in the span of 5 days of SSB interview.\n\

These qualities are not only examined for SSB interview but also must-haves in an Armed forces Officer to lead his/her team successfully. All of these qualities might not be present in one individual, someone excels in one quality while other is best in some other quality.\n
\n
        \n\n\n


Whoever possesses a maximum of these qualities and traits have higher chances to get selected:\n
\n\n\n

    </string>
    <string name="ra">
Reasoning ability:\n


Everything in life has to have logical significance and valid reasoning. This quality is generally checked by IO during Personal Interview and questions are asked based on your PIQ form. Therefore, while filling up this form, one needs to be very careful and only write logical answers.\n\n


</string>
    <string name="ei">
Effective intelligence:\n


This is the quality of an individual to tackle critical problems during critical situations. Candidates must be able to use their practical intelligence so as to solve real-life problems they might face during life situations.\n


\n\n
    </string>
    <string name="expression">
Power of expression:\n


Your knowledge and intelligence is of no use if you fail to express it effectively in front of people. Candidates must be able to put across their opinions and views during several tests with much clarity and ease.\n\n\n


</string>
    <string name="quality">
Organising quality:\n


This is a trait that makes you utilize scarce resources smartly and systematically. During bad situations in life, you must be able to handle every crisis efficiently and manageably.\n\n\n


</string>
    <string name="abilities">
Social abilities:\n


It is the quality of a person that determines how socially adaptable they are with other people. Moreover, it is a quotient of how skilfully you manage your feelings towards them.\n\n\n


</string>
    <string name="responsibility">
Sense of responsibility\n


Performing every assigned task with extreme sincerity and determination is what defines your sense of responsibility. Whether you follow the rules and regulations strictly or not also tells a lot about your attitude towards the job.\n\n\n

    </string>
    <string name="intiatingability">
Initiating abilities:\n


This is the quality of an individual to initiate and take decisions for every situation that comes their way. One needs to volunteer and take initiative actions to prove their interest in tasks. Generally, this quality is analysed during Group Discussions.\n\n\n


</string>
    <string name="coperative">
Cooperative nature:\n


If you participate in group tasks with utmost harmony, then you are said to have cooperative capabilities. To develop this quality, one needs to be kind, helpful, friendly and have team spirit.\n\n\n


</string>
    <string name="confidence">
Self-confidence:\n


If you keep doubting yourself, you are not really capable of handling stressful and unfamiliar situations in life. Self-confidence is the basic foundation of your faith in yourself. This quality is displayed when one has a strong body language, clear voice, and confident expressions.\n\n\n

    </string>
    <string name="decisionmakingability">
Decision-making capability:\n


Candidates must be able to take practical decisions that are accurate and quick. A confused officer is certainly not desirable to lead the team.\n\n\n


</string>
    <string name="influence">
Power of influence:\n


Your ability to influence a group or convince the interviewer showcases your influencing abilities.\n\n\n


</string>
    <string name="courage">
Courage:\n


Needless to say, an officer’s worth is expressed by their courage! Your willingness towards taking risk shows your determination towards objectives in life.\n\n\n


</string>
    <string name="stamina">
Stamina:\n


Candidates need to have ample amount of stamina to endure continuous mental and physical stress.\n\n\n


</string>
    <string name="liveeliness">
Liveliness:\n


If you are not really cheerful, active and enthusiastic in everything you do in life, you are not lively! Keeping a smiling face, displaying high energy levels and not complaining/nagging are all features of liveliness.\n\n\n


</string>
    <string name="determination">
Determination:\n
If you put efforts towards something in life, despite all the failures and obstacles, you know you are really determined towards your goal. Every candidate needs to have extreme determination towards their aim in life. This is the main quality checked during SSB interview.

\n\n\n
    </string>
</resources>